Fix crash on startup caused by Dropbox plugin

Create the item state socket on "begin retrieval" and delete
it again in "end retrieval".

BUG: 332481
FIXED-IN: 4.13.0
REVIEW: 117344